--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -90,6 +90,14 @@ DashboardScreen As screen:
                     Y: =20
                     ZIndex: =4
 
+                Image2 As image:
+                    Height: =40
+                    Image: =email
+                    Width: =40
+                    X: =40
+                    Y: =40
+                    ZIndex: =5
+
             ctnopenleadtabDS As groupContainer.manualLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 BorderColor: =RGBA(204, 204, 204, 1)
