--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -350,7 +350,7 @@ SubmittedLeadScreen As screen:
                     )
                 Layout: =Layout.Vertical
                 TemplatePadding: =0
-                TemplateSize: =If(btnheaderSLS.Text="Quoted Leads" ||btnheaderSLS.Text="Sold Leads",380,220)
+                TemplateSize: =If(btnheaderSLS.Text="Quoted Leads" ||btnheaderSLS.Text="Sold Leads",360,200)
                 Width: =If(Parent.Width>1000,Parent.Width,Parent.Width/1.05)
                 X: =20
                 Y: =ctnSearchBarSLS_1.Height+ctnSearchBarSLS_1.Height
@@ -419,16 +419,16 @@ SubmittedLeadScreen As screen:
                     ZIndex: =4
 
                 htmltxtZipcodeSLS As htmlViewer:
-                    AutoHeight: =true
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
-                    Height: =20
+                    Height: =0
                     HtmlText: |-
                         ="<b>Zipcode : </b>" & ThisItem.'ZipCode '
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
+                    Visible: =false
                     Width: =Parent.Width/1.08
                     X: =10
                     Y: =htmltxtAddressSLS.Y+htmltxtAddressSLS.Height
@@ -527,6 +527,7 @@ SubmittedLeadScreen As screen:
                     PaddingBottom: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
+                    Visible: =If(Header="InProgress",true,false)
                     Width: =Parent.Width/1.08
                     X: =10
                     Y: =htmltxtStatusDateSLS_1.Y+htmltxtStatusDateSLS_1.Height
