--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -84,18 +84,19 @@ DashboardScreen As screen:
                 Circle1 As circle:
                     Fill: =RGBA(255, 191, 0, 1)
                     Height: =30
-                    Visible: =If(CountRows(Filter(LeadChats,LeadInformationLID.QQTeamName=User().FullName && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No /*&& (LeadInformationLID.LeadStatus="Submitted" || LeadInformationLID.LeadStatus="InProgress")*/))>0,true,false)
+                    Visible: =false //If(CountRows(Filter(LeadChats,LeadInformationLID.QQTeamName=User().FullName && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No /*&& (LeadInformationLID.LeadStatus="Submitted" || LeadInformationLID.LeadStatus="InProgress")*/))>0,true,false)
                     Width: =30
                     X: =Parent.Width-Self.Width-20
                     Y: =20
                     ZIndex: =4
 
                 Image2 As image:
-                    Height: =40
+                    Height: =30
                     Image: =email
-                    Width: =40
-                    X: =40
-                    Y: =40
+                    Visible: =If(CountRows(Filter(LeadChats,LeadInformationLID.QQTeamName=User().FullName && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No /*&& (LeadInformationLID.LeadStatus="Submitted" || LeadInformationLID.LeadStatus="InProgress")*/))>0,true,false)
+                    Width: =30
+                    X: =Parent.Width-Self.Width-20
+                    Y: =20
                     ZIndex: =5
 
             ctnopenleadtabDS As groupContainer.manualLayoutContainer:
@@ -152,11 +153,20 @@ DashboardScreen As screen:
                 Circle1_1 As circle:
                     Fill: =RGBA(255, 191, 0, 1)
                     Height: =30
-                    Visible: =If(CountRows(Filter(LeadChats,'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No /* && (LeadInformationLID.LeadStatus="Submitted" || LeadInformationLID.LeadStatus="InProgress")*/))>0,true,false)
+                    Visible: =false //If(CountRows(Filter(LeadChats,'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No /* && (LeadInformationLID.LeadStatus="Submitted" || LeadInformationLID.LeadStatus="InProgress")*/))>0,true,false)
                     Width: =30
                     X: =Parent.Width-Self.Width-20
                     Y: =20
                     ZIndex: =4
+
+                Image2_1 As image:
+                    Height: =30
+                    Image: =email
+                    Visible: =If(CountRows(Filter(LeadChats,'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No  && (LeadInformationLID.LeadStatus="Submitted" || LeadInformationLID.LeadStatus="InProgress" ||LeadInformationLID.LeadStatus="Rejected")))>0,true,false)
+                    Width: =30
+                    X: =Parent.Width-Self.Width-20
+                    Y: =20
+                    ZIndex: =5
 
             ctnquotedleadtabDS As groupContainer.manualLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
@@ -209,6 +219,15 @@ DashboardScreen As screen:
                     Y: =//Parent.Y
                     ZIndex: =3
 
+                Image2_2 As image:
+                    Height: =30
+                    Image: =email
+                    Visible: =If(CountRows(Filter(LeadChats,'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No  && (LeadInformationLID.LeadStatus="Quoted")))>0,true,false)
+                    Width: =30
+                    X: =Parent.Width-Self.Width-20
+                    Y: =20
+                    ZIndex: =4
+
             ctnsoldleadtabDS As groupContainer.manualLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 BorderColor: =RGBA(204, 204, 204, 1)
@@ -259,6 +278,15 @@ DashboardScreen As screen:
                     Width: =Parent.Width
                     Y: =//Parent.Y
                     ZIndex: =3
+
+                Image2_3 As image:
+                    Height: =30
+                    Image: =email
+                    Visible: =If(CountRows(Filter(LeadChats,'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No  && (LeadInformationLID.LeadStatus="Sold")))>0,true,false)
+                    Width: =30
+                    X: =Parent.Width-Self.Width-20
+                    Y: =20
+                    ZIndex: =4
 
         Container2 As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
